front/src/app/component/recipes/recipes.component.css
.background, .pink-btn{
    background-color: #e9e9e8;
    margin-top: 10px;
    border-radius: 5%;
    cursor: pointer;
}
.background:hover, .pink-btn:hover{
    background-color: #ffe0e0;
    /* color: white; */
}
.border-bottom{
    border-color: var(--main-color) !important;
}
.color, .pink-btn{
    color: #d25c4c;
    font-family: var(--second-font);
    font-weight: 600;
    /* font-family: "Oswald", sans-serif; */
}
.white{
    cursor: pointer;
    
}
.white img {
    transition: transform 0.3s ease; /* Smooth transition for the image */
}

.white:hover img {
    transform: scale(1.1); /* Scale up the image on hover */
}
.imagehover{
    overflow: hidden;
    border-radius: 5%;
}

.inline{
    display: inline !important;
}
.badge{
    color: #fcb900;
    font-size: 15px;
    background-color: rgba(0, 0, 0, 0.5);
}

.red{
    color: var(--btn-color);
    font-family: var(--second-font);
    font-weight: 600;
}
.white{
    background-color: white;
}
h6{
    display: inline-block !important;
}
.img-fluid{
    width: 50px;
    
}

.my-svg {
    color: white;
}

.green-div{
    background-color: #39535b;
    border-radius: 5%;
    color: white;
}
.pink-btn{
    /* background-color: var(--main-btn-bg);  */
    letter-spacing: 0.09em;
    /* color: white; */
}
.pink-btn:hover {
    /* background-color: white;  */
    /* color: var(--main-color); 
    border-color:var(--main-color) ; */
}
.pink-btn img{
    filter: invert(70%);
}
.pink-btn:hover img{
    filter: invert(92%);
}
.rounded-image{
    border-radius: 5%;
}

h5{
    font-size: 23px !important;
    color: var(--main-color);
    font-family: var(--main-font);
}
.latestContent p{
    font-family: var(--third-font);
    font-size: 18px;
    color: var(--second-color);
}
.selected {
    
    background-color: #ffe0e0; 
}

.checkbox-container {
    display: flex;
    flex-wrap: wrap; 
    justify-content: center;
}

.smaller-div{
    width: 100%;
}


@media screen and (max-width: 450px) {
    .media{
        flex-direction: column;
    }
    
}
@media (min-width: 981px) and (max-width: 1500px) {
    .small-div {
        width: 15%;
        
    }
    .smaller-div{
        width: 100%;
    }
    .pink-btn{
        width: 100%;
    }
}
@media screen and (max-width: 1050px) {
    .img-fluid{
        width: 50px;
    }
    .category{
        display: flex;
        justify-content: center;
        align-items: center;
    }
    
    
}
@media screen and (max-width: 760px) {
    .img-fluid{
        width: 50px;
    }
    .color{
        font-size: 80% !important;
    }
    .green-div{
        width: 100% !important;
    }
    .smaller-div ,.sm-div{
        
        
        margin: auto;
    }
}
@media screen and (max-width: 670px) {
    .smaller-div,.sm-div{   
        margin: auto;
    }
    .img-fluid{
        width: 50px;
    }
    .color{
        font-size: 100% !important;
    }
}

/* Intro Category Section */
.intro{
    height: fit-content;
    width: 100%;
    background-color: var(--third-color);
}
.introImg img{
        /* display: block; */
    width: 305px;
    height: 330px;
    object-fit: cover;
}
.introContent {
    padding: 50px 65px;
}
.introContent h1{
    color: var(--btn-color);
    font-size: 50px;
    font-weight: bold;
    margin-bottom: 10px;
    letter-spacing: 2px;
}
.introContent p{
    color: var(--second-color);
    font-size: 20px;
}

